<resources>

    <string name="app_name">Đọc Truyện</string>
    <!--Đăng nhập, đăng ký-->
    <string name="email">Email</string>
    <string name="username">Tên Tài Khoản</string>
    <string name="password">Mật Khẩu</string>
    <string name="datecreated">Ngày Tạo</string>
    <string name="register">Đăng Kí </string>
    <string name="exit">Thoát</string>
    <string name="login">Đăng Nhập </string>
    <string name="change_language">Chọn ngôn ngữ</string>
    <string name="remember">Ghi nhớ tài khoản</string>
    <string name="dangki">Bạn chưa có tài khoản, <b>Đăng ký?</b> </string>

    <!--Trang chủ-->
    <string name="contact">Liên Hệ </string>
    <string name="name_Cate">Tên chuyên mục </string>

    <!--Cài đặt-->
    <string name="setting">Cài đặt </string>
    <string name="language">Thay đổi ngôn ngữ</string>
    <string name="color">Thay đổi giao diện </string>



</resources>