<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".Login_Register.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="120dp"
            android:paddingBottom="20dp"
            ></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:text="@string/login"
            android:textSize="40dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/taikhoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFF"
            android:hint="@string/username"
            android:padding="15dp"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:textColorHint="@color/cray"></EditText>

        <EditText
            android:id="@+id/matkhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFF"
            android:hint="@string/password"
            android:padding="15dp"
            android:textColorHint="@color/cray"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            ></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">
            <Button
                android:id="@+id/dangnhap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/dangky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangki" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>