<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backSetting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back_24"
            android:background="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:background="@drawable/shape_transparent_button_01"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/baseline_language_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="100dp"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="20dp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/shape_transparent_button_01"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/ic_dark_mode_24" />

        <TextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="100dp"
            android:text="@string/color"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/shape_transparent_button_01"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/baseline_error_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="100dp"
            android:text="Phiên bản ứng dụng"
            android:textColor="@color/white"
            android:textSize="20dp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>
</LinearLayout>